Fix align and size of backgraund on menu display

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
     color: #000;
     text-decoration: none;
   }
-
+  
   .col1 {
     display: flex;
     flex-direction: column;
@@ -332,7 +332,7 @@
 
   .form-container label {
     position: absolute;
-    bottom: 110px;
+    bottom: 30px;
     left: 16px;
     font-size: 10px;
     color: #7d7c84;
